Test email service created

--- a/serverless.yml
+++ b/serverless.yml
@@ -19,6 +19,6 @@ functions:
     # The `events` block defines how to trigger the handler.helloWorld code
     events:
       - http:
-          path: hello-world
+          path: main
           method: get
           cors: true
